# locksum

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  index.md  threat_model.md  vault_format.md
src/locksum/: __init__.py  __main__.py  config.py  launcher.py  logger.py  model.py  securemem.py  services.py
src/locksum/cli/: __init__.py  __main__.py
src/locksum/gui/: __init__.py  __main__.py  controller.py  view.py
tests/: conftest.py  test_aesgcm.py  test_cli.py  test_cli_extra.py  test_cli_workflows.py  test_controller.py  test_export_import.py  test_gui.py  test_launcher_securemem.py  test_model.py  test_property_crypto.py  test_rehash.py  test_vaultstore.py
